--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>NewLandingpage</title>
+  <title>Truong Homepage</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -14,7 +14,6 @@
 
 <body>
   <new-landingpage-root></new-landingpage-root>
-  <script src="https://www.youtube.com/iframe_api"></script>
 </body>
 
 </html>
